--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,10 @@ setenv =
     ES_HOST=localhost
     SHEER_ELASTICSEARCH_INDEX=content
     STAGING_HOSTNAME=content.localhost
+    AKAMAI_USER=test@mail.com
+    AKAMAI_PASSWORD=password
+    AKAMAI_NOTIFY_EMAIL=test@mail.com
+    AKAMAI_HOST=localhost
 deps =
     -r{toxinidir}/requirements/test.txt
 changedir = {toxinidir}/cfgov
